implemented control template

--- a/CdManager.Wpf/App.xaml
+++ b/CdManager.Wpf/App.xaml
@@ -58,7 +58,7 @@
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="ListViewItem">
+        <!--<Style TargetType="ListViewItem">
             <Setter Property="Margin" Value="3,3,3,3"/>
             <Style.Triggers>
                 <EventTrigger RoutedEvent="MouseEnter">
@@ -76,6 +76,19 @@
                     </BeginStoryboard>
                 </EventTrigger>
             </Style.Triggers>
-        </Style>
+        </Style>-->
+
+        <ControlTemplate x:Key="ButtonTemplate" TargetType="Button">
+            <Border x:Name="Border" BorderBrush="Blue" BorderThickness="3" CornerRadius="3" Background="Azure" Padding="3" Margin="3">
+                <TextBlock Margin="{TemplateBinding Padding}" Text="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            </Border>
+
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter TargetName="Border" Property="Background" Value="LightBlue"/>
+                    <Setter TargetName="Border" Property="Cursor" Value="Hand"/>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
     </Application.Resources>
 </Application>
