--- a/CdManager.Wpf/AddCdWindow.xaml
+++ b/CdManager.Wpf/AddCdWindow.xaml
@@ -2,30 +2,30 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Cd anlegen" Height="200" Width="306" Style="{StaticResource ResourceKey=WindowsStyle}">
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition Height="Auto"/>
-      <RowDefinition/>
-    </Grid.RowDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Style="{StaticResource ResourceKey=FormCaptionStyle}">Neue Cd anlegen</TextBlock>
-    <Grid Name="grdCdFields" Grid.Row="1">
-      <Grid.RowDefinitions>
-        <RowDefinition/>
-        <RowDefinition/>
-      </Grid.RowDefinitions>
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="100"/>
-        <ColumnDefinition/>
-      </Grid.ColumnDefinitions>
-      <Label Grid.Column="0" Grid.Row="0">Cd-Titel:</Label>
-      <TextBox Name="tbTitle" Grid.Column="1" Grid.Row="0"  Text="{Binding Path=AlbumTitle}" ></TextBox>
-      <Label Grid.Column="0" Grid.Row="1">Artist:</Label>
-      <TextBox Name="tbArtist" Grid.Column="1" Grid.Row="1" Text="{Binding Path=Artist}" ></TextBox>
+        <Grid Name="grdCdFields" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Grid.Row="0">Cd-Titel:</Label>
+            <TextBox Name="tbTitle" Grid.Column="1" Grid.Row="0"  Text="{Binding Path=AlbumTitle}" ></TextBox>
+            <Label Grid.Column="0" Grid.Row="1">Artist:</Label>
+            <TextBox Name="tbArtist" Grid.Column="1" Grid.Row="1" Text="{Binding Path=Artist}" ></TextBox>
+        </Grid>
+        <UniformGrid Rows="1" Grid.Row="2">
+            <Button Name="btSave" Template="{StaticResource ButtonTemplate}">Speichern</Button>
+            <Button Name="btCancel" Template="{StaticResource ButtonTemplate}">Abbrechen</Button>
+        </UniformGrid>
     </Grid>
-    <UniformGrid Rows="1" Grid.Row="2">
-      <Button Name="btSave">Speichern</Button>
-      <Button Name="btCancel">Abbrechen</Button>
-    </UniformGrid>
-  </Grid>
 </Window>
